--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "contentful": "^9.1.3",
     "core-js": "^3.15.1",
+    "marked": "^3.0.7",
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
