--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/sitemap": "^2.4.0",
     "contentful": "^9.1.3",
     "core-js": "^3.15.1",
     "marked": "^3.0.7",
