--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -20,8 +20,8 @@ jobs:
         with:
           switches: -avzr --delete
           path: dist/
-          remote_path: ${{ SSH_DESTINATION }}
-          remote_host: ${{ SSH_HOST }}
-          remote_user: ${{ SSH_USERNAME }}
-          remote_key: ${{ SSH_KEY }}
-          remote_port: ${{ SSH_PORT }}
+          remote_path: ${{ secrets.SSH_DESTINATION }}
+          remote_host: ${{ secrets.SSH_HOST }}
+          remote_user: ${{ secrets.SSH_USERNAME }}
+          remote_key: ${{ secrets.SSH_KEY }}
+          remote_port: ${{ secrets.SSH_PORT }}
