--- a/.github/workflows/deploy-on-publish.yaml
+++ b/.github/workflows/deploy-on-publish.yaml
@@ -1,8 +1,7 @@
-name: Webhost deployment on publish
+name: Webhost deployment on push
 on:
-  push:
-    branches:
-      - main
+	repository_dispatch:
+    	types: [publish-event]
 jobs:
   build:
     runs-on: ubuntu-latest
