caching for npm modules

--- a/.github/workflows/deploy-on-push.yaml
+++ b/.github/workflows/deploy-on-push.yaml
@@ -16,6 +16,12 @@ jobs:
         with:
           name: ".contentful.json"
           json: ${{ secrets.CONTENTFUL_CREDENTIALS }}
+      - uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
       - name: Installing node dependencies
         run: npm ci
       - name: Building for production
